01_GATEWAY/console/003_ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: console
    app.kubernetes.io/managed-by: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: console-ingressroute-jinsoo
  namespace: api-gateway-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`/`, `/static/`, `/api/resource/`, `/api/console/`) && Host(`console.@@DNS@@`)
      priority: 10
      services:
        - name: console-service
          namespace: api-gateway-system
          kind: Service
          port: console
    - kind: Rule
      match: PathPrefix(`/api/hypercloud`, `/api/multi-hypercloud`,`/api/webhook`) && Host(`console.@@DNS@@`)
      priority: 100
      middlewares:
        - name: jwt-decode-auth@file
        - name: hypercloud-stripprefix@file
      services:
        - kind: Service
          name: hypercloud5-api-server-service
          namespace: hypercloud5-system
          port: https
          scheme: https
          serversTransport: insecure@file
    - kind: Rule
      match: PathPrefix(`/api/kubernetes`) && Host(`console.@@DNS@@`)
      priority: 100
      middlewares:
        - name: kubernetes-stripprefix@file
      services:
        - kind: Service
          name: kubernetes
          namespace: default
          port: https
          scheme: https
          serversTransport: kubernetes@file
    - kind: Rule
      match: PathPrefix(`/api/prometheus-tenancy/api`) && Host(`console.@@DNS@@`)
      priority: 100
      middlewares:
        - name: jwt-decode-auth@file
        - name: monitoring-stripprefix-tenancy@file
      services:
        - kind: Service
          name: prometheus-k8s
          namespace: monitoring
          port: web
          scheme: http
    - kind: Rule
      match: PathPrefix(`/api/prometheus/api`) && Host(`console.@@DNS@@`)
      priority: 100
      middlewares:
        - name: monitoring-stripprefix@file
        - name: jwt-decode-auth@file
      services:
        - kind: Service
          name: prometheus-k8s
          namespace: monitoring
          port: web
          scheme: http
    - kind: Rule
      match: PathPrefix(`/api/alertmanager/api`) && Host(`console.@@DNS@@`)
      priority: 100
      middlewares:
        - name: monitoring-stripprefix@file
        - name: jwt-decode-auth@file
      services:
        - kind: Service
          name: alertmanager-main
          namespace: monitoring
          port: web
          scheme: http
  tls: {} # use default tls
